--- a/home.html
+++ b/home.html
@@ -1,11 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kezdőoldal</title>
 </head>
+
 <body>
-    
+    <header>
+        <nav>
+            <h1>Bemutatkozó oldalam</h1>
+        </nav>
+    </header>
+
+    <nav id="teteje">
+        <h3>Menü</h3>
+        <ul>
+            <li><a href="home.html">Kezdőoldal</a></li>
+            <li><a href="works.html">Munkáim</a></li>
+            <li><a href="gallery.html">Galléria</a></li>
+            <li><a href="about.html">Rólam</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <section>
+            <article>
+                <header>
+                    <h2>Röviden rólam</h2>
+                    <p>Üdvözöllek az oldalon! <br>
+                        A nevem Porkoláb Mercédesz Anett, a Budapesti Műszaki és Gazdaságtudományi Egyetem mérnökinformatikus hallgatója vagyok. <br>
+                        Becenevem <em>Desszi</em>, mely a Mercé<strong>desz</strong> 
+                        végéből jött.
+                    </p>
+                </header>
+            </article>
+        </section>
+    </main>
+    <section>
+        <img src="/imagines/tabloen.png" height="400" alt="">
+        <a target="_blank "href="https://www.mastersoftwaresolutions.com/why-need-of-programing-language/">
+            <img src="/imagines/programozo.png" width="400" alt="">
+        </a>
+    </section>
+
+    <footer>
+        <nav>
+            <a href="#teteje">Vissza az oldal tetejére</a>
+        </nav>
+    </footer>
 </body>
+
 </html>
