--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kezdőoldal</title>
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body>
@@ -38,11 +39,24 @@
             </article>
         </section>
     </main>
+
     <section>
         <img src="/imagines/tabloen.png" height="400" alt="">
         <a target="_blank "href="https://www.mastersoftwaresolutions.com/why-need-of-programing-language/">
             <img src="/imagines/programozo.png" width="400" alt="">
         </a>
+    </section>
+
+    <section>
+        <div>
+            <h3>Együttműködő</h3>
+        </div>
+        <div>
+            <h3>Kitartó</h3>
+        </div>
+        <div>
+            <h3>Alázatos</h3>
+        </div>
     </section>
 
     <footer>
