--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Porkoláb Mercédesz Anett</title>
-    <link rel="stylesheet" href="css/main.css">
+ 
 </head>
 
 <body>
@@ -30,7 +30,7 @@
 
     <footer>
         <nav>
-            <a href="#teteje">Vissza az oldal tetejére</a>
+            <a href="#teteje">Vissza az oldal menüjéhez</a>
         </nav>
     </footer>
 </body>
