--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kezdőoldal</title>
-    <link rel="stylesheet" href="/css/main.css">
+
 </head>
 
 <body>
@@ -48,20 +48,20 @@
     </section>
 
     <section>
-        <div>
+        <div style="display: inline-block;">
             <h3>Együttműködő</h3>
         </div>
-        <div>
+        <div style="display: inline-block;">
             <h3>Kitartó</h3>
         </div>
-        <div>
+        <div style="display: inline-block;">
             <h3>Alázatos</h3>
         </div>
     </section>
 
     <footer>
         <nav>
-            <a href="#teteje">Vissza az oldal tetejére</a>
+            <a href="#teteje">Vissza az oldal menüjéhez</a>
         </nav>
     </footer>
 </body>
