--- a/works.html
+++ b/works.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Munkáim</title>
-    <link rel="stylesheet" href="css/main.css">
+   
 </head>
 
 <body>
@@ -25,12 +25,56 @@
         </ul>
     </nav>
 
+    <section>
+        <h3>1.Projekt</h3>
+        <div style="display: inline-block;">
+        <a target="_blank "href="https://infoc.eet.bme.hu/nhfgaleria2018/#55">
+            <img src="/imagines/porkolab_mercedesz_anett.jpg" width="400" alt="">
+        </a>
+        </div>
+        <div style="display: inline-block;">
+            <h2><strong>Snake</strong></h2>
+            <p>Az első félévben a Snake játékot készítettem el. <br>
+                A kódot C nyelven programoztam Code::Blocks fejlesztői környezetben, <br>
+                a grafikát én rajzoltam és SDL segítségével valósítottam meg. <br>
+                A projekt ,,A programozás alapjai 1" tárgy keretein belül készült.
+            </p>
+        </div>
+    </section>
+    <section>
+        <h3>2.Projekt</h3>
+        <div style="display: inline-block;">
+            <img src="/imagines/korona.png" width="400" alt="">
+        </div>
+        <div style="display: inline-block;">
+            <h2><strong>Koronavírus</strong></h2>
+            <p>Negyedik félévben a koronavírusról kellett számítógépes grafikát megjelenítenem. <br>
+                A program Visual Studio Community-ben készült, C++ nyelven OPEN GL segítségével. <br>
+                A projekt a ,,Számítógépes grafika" tárgy keretein belül készült.
+            </p>
+        </div>
+    </section>
+    <section>
+        <h3>3.Projekt</h3>
+        <div style="display: inline-block;">
+            <img src="/imagines/raktarpng.png" width="500" alt="">
+        </div>
+        <div style="display: inline-block;">
+            <h2><strong>Raktározás</strong></h2>
+            <p>Mostani félévben raktározási feladatot oldottam meg, ahol megadott nagyságú kisebb elemeket <br>
+                kellett bepakolni egy raktárba, úgy, hogy mind beférjen. (Olyan teszteket kaptam, ahol ez teljesült.)  <br>
+                A programot Eclipse környezetben írtam Java nyelven. <br>
+                A projekt a ,,Mesterséges intelligencia" tárgy keretein belül készült.
+            </p>
+        </div>
+    </section>
+
     <main></main>
-    <section></section>
+ 
 
     <footer>
         <nav>
-            <a href="#teteje">Vissza az oldal tetejére</a>
+            <a href="#teteje">Vissza az oldal menüjéhez</a>
         </nav>
     </footer>
 </body>
