--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Képeim</title>
-   
+    <link rel="stylesheet" href="/css/main.css">
+
 </head>
 
 <body>
@@ -25,8 +26,38 @@
         </ul>
     </nav>
 
-    <main></main>
-    <section></section>
+    <main>
+        <section>
+            <h3>Képek gallériája</h3>
+            <div class="container">
+                <div class="row">
+                    <div class="col-3"></div>
+                    <img id="img-0" src="/imagines/19.jpg" alt="Életem első pilótarepülése">
+                    <img id="img-0" src="/imagines/19.jpg" alt="Életem első pilótarepülése">
+                    <img id="img-0" src="/imagines/19.jpg" alt="Életem első pilótarepülése">
+                    <img id="img-0" src="/imagines/19.jpg" alt="Életem első pilótarepülése">
+                    <img id="img-0" src="/imagines/19.jpg" alt="Életem első pilótarepülése">
+                    <img id="img-0" src="/imagines/19.jpg" alt="Életem első pilótarepülése">
+                    <img id="img-0" src="/imagines/19.jpg" alt="Életem első pilótarepülése">
+                    <img id="img-0" src="/imagines/19.jpg" alt="Életem első pilótarepülése">
+                    <img id="img-0" src="/imagines/19.jpg" alt="Életem első pilótarepülése">
+                    <img id="img-0" src="/imagines/19.jpg" alt="Életem első pilótarepülése">
+                    <img id="img-0" src="/imagines/19.jpg" alt="Életem első pilótarepülése">
+                    <img id="img-0" src="/imagines/19.jpg" alt="Életem első pilótarepülése">
+                    <img id="img-0" src="/imagines/19.jpg" alt="Életem első pilótarepülése">
+                    <img id="img-0" src="/imagines/19.jpg" alt="Életem első pilótarepülése">
+                    <img id="img-0" src="/imagines/19.jpg" alt="Életem első pilótarepülése">
+                    <img id="img-0" src="/imagines/19.jpg" alt="Életem első pilótarepülése">
+                    <img id="img-0" src="/imagines/19.jpg" alt="Életem első pilótarepülése">
+                    <img id="img-0" src="/imagines/19.jpg" alt="Életem első pilótarepülése">
+                    <img id="img-0" src="/imagines/19.jpg" alt="Életem első pilótarepülése">
+                    <img id="img-0" src="/imagines/19.jpg" alt="Életem első pilótarepülése">
+                    <img id="img-0" src="/imagines/19.jpg" alt="Életem első pilótarepülése">
+                </div>
+            </div>
+        </section>
+    </main>
+
 
     <footer>
         <nav>
