--- a/home.html
+++ b/home.html
@@ -31,8 +31,9 @@
                 <header>
                     <h2>Röviden rólam</h2>
                     <p>Üdvözöllek az oldalon! <br>
-                        A nevem Porkoláb Mercédesz Anett, a Budapesti Műszaki és Gazdaságtudományi Egyetem mérnökinformatikus hallgatója vagyok. <br>
-                        Becenevem <em>Desszi</em>, mely a Mercé<strong>desz</strong> 
+                        A nevem Porkoláb Mercédesz Anett, a Budapesti Műszaki és Gazdaságtudományi Egyetem
+                        mérnökinformatikus hallgatója vagyok. <br>
+                        Becenevem <em>Desszi</em>, mely a Mercé<strong>desz</strong>
                         végéből jött.
                     </p>
                 </header>
@@ -42,19 +43,19 @@
 
     <section>
         <img src="/imagines/tabloen.png" height="400" alt="">
-        <a target="_blank "href="https://www.mastersoftwaresolutions.com/why-need-of-programing-language/">
+        <a target="_blank " href="https://www.mastersoftwaresolutions.com/why-need-of-programing-language/">
             <img src="/imagines/programozo.png" width="400" alt="">
         </a>
     </section>
 
     <section>
-        <div style="display: inline-block;">
+        <div style="display: inline-block; width: 30%">
             <h3>Együttműködő</h3>
         </div>
-        <div style="display: inline-block;">
+        <div style="display: inline-block; width: 30%">
             <h3>Kitartó</h3>
         </div>
-        <div style="display: inline-block;">
+        <div style="display: inline-block;width: 30%">
             <h3>Alázatos</h3>
         </div>
     </section>
