--- a/home.html
+++ b/home.html
@@ -42,10 +42,14 @@
     </main>
 
     <section>
-        <img src="/imagines/tabloen.png" height="400" alt="">
-        <a target="_blank " href="https://www.mastersoftwaresolutions.com/why-need-of-programing-language/">
-            <img src="/imagines/programozo.png" width="400" alt="">
-        </a>
+        <div style="display: inline-block;">
+            <img src="/imagines/tabloen.png" height="400" alt="">
+        </div>
+        <div style="display: inline-block;">
+            <a target="_blank " href="https://www.mastersoftwaresolutions.com/why-need-of-programing-language/">
+                <img src="/imagines/programozo.png" width="400" alt="">
+            </a>
+        </div>
     </section>
 
     <section>
