--- a/gallery.html
+++ b/gallery.html
@@ -29,9 +29,7 @@
     <main>
         <section>
             <h3>Képek gallériája</h3>
-            <div class="container">
-                <div class="row">
-                    <div class="col-3"></div>
+            <div class="pictures">
                     <img id="img-0" src="/imagines/19.jpg" alt="Életem első pilótarepülése">
                     <img id="img-0" src="/imagines/19.jpg" alt="Életem első pilótarepülése">
                     <img id="img-0" src="/imagines/19.jpg" alt="Életem első pilótarepülése">
@@ -53,7 +51,6 @@
                     <img id="img-0" src="/imagines/19.jpg" alt="Életem első pilótarepülése">
                     <img id="img-0" src="/imagines/19.jpg" alt="Életem első pilótarepülése">
                     <img id="img-0" src="/imagines/19.jpg" alt="Életem első pilótarepülése">
-                </div>
             </div>
         </section>
     </main>
