--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="form-group">
                     <label for="e_email">Email-cím*:</label>
-                    <input type="text" class="form-control" name="email" id="e_email" aria-describedby="emailHelp" required>
+                    <input type="email" class="form-control" name="email" id="e_email" aria-describedby="emailHelp" required>
                 </div>
                 <div class="form-group">
                     <label for="e_comment">Üzenet*:</label>
